[update] Edited styles to make things more visible on light mode. Tried, and failed, to solve the collision gap.

--- a/frontend/src/theme/variables.css
+++ b/frontend/src/theme/variables.css
@@ -12,9 +12,9 @@ http://ionicframework.com/docs/theming/ */
   --color-maze-background: #9bbc0f;
   --color-gradient-primary: #0040f5;
   --device-theme: light;
-  --color-maze-player: #000000;
+  --color-maze-player: #bc300f;
   --color-maze-bricks: #222;
-  --color-maze-winarea: #555;
+  --color-maze-winarea: #bc0f9b;
   --ion-background-color: #ededed;
 
   /** primary **/
